objects/University_Duplicates_Detail__c/University_Duplicates_Detail__c.object-meta.xml
<CustomObject>
    <description>This Object consists of all the duplicate student details</description>
    <label>University Duplicates Detail</label>
    <nameField>
        <label>Entry Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>University Duplicates Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>