objects/University_Duplicates_Detail__c/fields/University1_Course__c.field-meta.xml
<CustomField>
    <fullName>University1_Course__c</fullName>
    <label>University1 Course</label>
    <length>50</length>
    <type>Text</type>
</CustomField>