objects/University_Duplicates_Detail__c/fields/University1_Name__c.field-meta.xml
<CustomField>
    <fullName>University1_Name__c</fullName>
    <label>University1 Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>