objects/University_Duplicates_Detail__c/fields/University1_RollNO__c.field-meta.xml
<CustomField>
    <fullName>University1_RollNO__c</fullName>
    <label>University1 RollNO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>