objects/University_Duplicates_Detail__c/fields/University2_Course__c.field-meta.xml
<CustomField>
    <fullName>University2_Course__c</fullName>
    <label>University2 Course</label>
    <length>50</length>
    <type>Text</type>
</CustomField>