objects/University_Duplicates_Detail__c/fields/University2_Name__c.field-meta.xml
<CustomField>
    <fullName>University2_Name__c</fullName>
    <label>University2 Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>