objects/University_Duplicates_Detail__c/fields/University2_RollNO__c.field-meta.xml
<CustomField>
    <fullName>University2_RollNO__c</fullName>
    <label>University2 RollNO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>